calico-policies/private-network-isolation/calico-v3/jp-tok/allow-private-service-endpoint.yaml
# This policy allows outgoing network traffic from worker nodes in each zone
# of your cluster to the cluster master through the private service endpoint.
# Note that you must allow outgoing traffic for all of the zones within the region.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-private-service-endpoint
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # Control plane IP addresses for ap-north: che01, hkg02, seo01, sng01, tok02, tok04, tok05
      - 166.9.40.21/32
      - 166.9.40.22/32
      - 166.9.40.36/32
      - 166.9.40.38/32
      - 166.9.40.39/32
      - 166.9.40.6/32
      - 166.9.40.7/32
      - 166.9.40.8/32
      - 166.9.40.92/32
      - 166.9.42.23/32
      - 166.9.42.24/32
      - 166.9.42.28/32
      - 166.9.42.54/32
      - 166.9.42.55/32
      - 166.9.42.6/32
      - 166.9.42.7/32
      - 166.9.44.15/32
      - 166.9.44.16/32
      - 166.9.44.4/32
      - 166.9.44.46/32
      - 166.9.44.47/32
      - 166.9.44.5/32
      - 166.9.46.4/32
      - 166.9.60.2/32
      ports:
      - 20000:32767
      - 443
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      nets:
      # Control plane IP addresses for ap-north: che01, hkg02, seo01, sng01, tok02, tok04, tok05
      - 166.9.40.21/32
      - 166.9.40.22/32
      - 166.9.40.36/32
      - 166.9.40.38/32
      - 166.9.40.39/32
      - 166.9.40.6/32
      - 166.9.40.7/32
      - 166.9.40.8/32
      - 166.9.40.92/32
      - 166.9.42.23/32
      - 166.9.42.24/32
      - 166.9.42.28/32
      - 166.9.42.54/32
      - 166.9.42.55/32
      - 166.9.42.6/32
      - 166.9.42.7/32
      - 166.9.44.15/32
      - 166.9.44.16/32
      - 166.9.44.4/32
      - 166.9.44.46/32
      - 166.9.44.47/32
      - 166.9.44.5/32
      - 166.9.46.4/32
      - 166.9.60.2/32
      ports:
      - 20000:32767
      - 443
    protocol: TCP
    source: {}
  order: 1900
  selector: ibm.role == 'worker_private'
  types:
  - Egress
