calico-policies/private-network-isolation/calico-v3/jp-tok/allow-sys-mgmt-private.yaml
# This policy allows connections for specific IBM Cloud infrastructure
# (SoftLayer) systems that are used to manage the worker nodes.
# Note that you must include the nets for dal01, dal10, and wdc04.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-sys-mgmt-private
spec:
  ingress:
  - action: Allow
    destination: {}
    source:
      nets:
      # Required nets for all clusters: dal01, dal10, wdc04
      - 10.0.64.0/19
      - 10.200.80.0/20
      - 10.3.160.0/20
      - 10.201.0.0/20
      # Nets for AP North zones
      - 10.200.16.0/20 # che01
      - 10.2.160.0/20 # hkg02
      - 10.200.64.0/20 # seo01
      - 10.2.32.0/20 # sng01
      - 10.3.64.0/20 # tok02
      - 10.201.176.0/20 # tok04
      - 10.201.192.0/20 # tok05
  order: 1800
  selector: ibm.role == 'worker_private'
  types:
  - Ingress
